--- a/main.css
+++ b/main.css
@@ -13,3 +13,11 @@
 .col{
     align-items: center;
 }
+.foot{
+    background-color: white;
+    color: black;
+}
+.ft{
+    background-color: black;
+    color: white;
+}
