--- a/main.css
+++ b/main.css
@@ -1,23 +1,63 @@
 .header{
     height: 90px;
     background-color: black;
+    
 }
 .header div div img{
-    padding-top: 10px  ;
+    margin-top: 5px;
 }
 .top{
-    color: antiquewhite;
+    color: goldenrod;
     display: flex;
     align-items: center;
 }
-.col{
-    align-items: center;
-}
+
 .foot{
     background-color: white;
     color: black;
+   
 }
 .ft{
     background-color: black;
     color: white;
 }
+.fs{
+    margin-right: 550px;
+}
+@media (max-width:810px) {
+    .nav-font{
+        font-size: 15px;
+    }
+}
+@media (max-width:780px) {
+    .nav-font{
+        font-size: 12px;
+    }
+}
+@media (max-width:500px) {
+    .header{
+        height: 100px;
+        background-color: black;
+        
+    }
+}
+    
+@media (min-width:1000px) {
+    
+    .fs{
+        margin-left: 550px;
+    }
+}
+@media (min-width: 450px) {
+    .header div div img{
+        margin-bottom: 45px;
+    }
+    .top{
+        margin-bottom: 45px;
+    }
+    .nav-font{
+        font-size: 12px;
+    }
+   
+}
+
